docs/pages/versions/v57.0.0/sdk/ui/jetpack-compose/lazycolumn.mdx
---
title: LazyColumn
description: A Jetpack Compose LazyColumn component for displaying scrollable lists.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['android', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ComponentExample } from '~/ui/components/ComponentExample';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

A lazily-loaded vertical list component that only renders visible items for efficient scrolling. See the [official Jetpack Compose documentation](https://developer.android.com/develop/ui/compose/lists) for more information.

> **info** `LazyColumn` is not truly lazy yet: the native side only composes visible items, but React still creates every child up front, so large lists can be slow to mount. We are working on improving this. For large lists, we recommend [FlashList](https://shopify.github.io/flash-list/) or [Legend List](https://github.com/LegendApp/legend-list).

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/lazycolumn/android-light.webp"
  darkSrc="/static/images/expo-ui/lazycolumn/android-dark.webp"
  alt="LazyColumn rendering a settings list of five Material 3 list items"
/>

## Installation

<APIInstallSection />

## Usage

### Basic lazy column

<ComponentExample
  title="BasicLazyColumn.tsx"
  src="/static/images/expo-ui/examples/lazycolumn-basic-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/lazycolumn-basic-android-dark.webp"
  alt="A scrollable list showing the first seven of one hundred items">

```tsx
import {
  Host,
  LazyColumn,
  ListItem,
  Text,
} from '@expo/ui/jetpack-compose';

const items = Array.from(
  { length: 100 },
  (_, i) => `Item ${i + 1}`
);

export default function BasicLazyColumn() {
  return (
    <Host style={{ height: 400 }}>
      <LazyColumn>
        {items.map(item => (
          <ListItem key={item}>
            <ListItem.HeadlineContent>
              <Text>{item}</Text>
            </ListItem.HeadlineContent>
          </ListItem>
        ))}
      </LazyColumn>
    </Host>
  );
}
```

</ComponentExample>

### With arrangement

Use the `verticalArrangement` prop to control how items are spaced within the list. Pass a string value like `'spaceBetween'` or an object like `{ spacedBy: 8 }` for fixed spacing in dp.

<ComponentExample
  title="LazyColumnArrangement.tsx"
  src="/static/images/expo-ui/examples/lazycolumn-arrangement-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/lazycolumn-arrangement-android-dark.webp"
  alt="Three list items separated by an eight density independent pixel gap">

```tsx
import {
  Host,
  LazyColumn,
  ListItem,
  Text,
} from '@expo/ui/jetpack-compose';

export default function LazyColumnArrangement() {
  return (
    <Host style={{ height: 400 }}>
      <LazyColumn
        verticalArrangement={{ spacedBy: 8 }}
        horizontalAlignment="center">
        <ListItem>
          <ListItem.HeadlineContent>
            <Text>Spaced Item 1</Text>
          </ListItem.HeadlineContent>
        </ListItem>
        <ListItem>
          <ListItem.HeadlineContent>
            <Text>Spaced Item 2</Text>
          </ListItem.HeadlineContent>
        </ListItem>
        <ListItem>
          <ListItem.HeadlineContent>
            <Text>Spaced Item 3</Text>
          </ListItem.HeadlineContent>
        </ListItem>
      </LazyColumn>
    </Host>
  );
}
```

</ComponentExample>

### With content padding

Use the `contentPadding` prop to add padding around the list content in dp.

<ComponentExample
  title="LazyColumnPadding.tsx"
  src="/static/images/expo-ui/examples/lazycolumn-padding-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/lazycolumn-padding-android-dark.webp"
  alt="Three list items inset from the edges of the list by content padding">

```tsx
import {
  Host,
  LazyColumn,
  ListItem,
  Text,
} from '@expo/ui/jetpack-compose';

export default function LazyColumnPadding() {
  return (
    <Host style={{ height: 400 }}>
      <LazyColumn
        contentPadding={{ start: 16, top: 8, end: 16, bottom: 8 }}>
        <ListItem>
          <ListItem.HeadlineContent>
            <Text>Padded item 1</Text>
          </ListItem.HeadlineContent>
        </ListItem>
        <ListItem>
          <ListItem.HeadlineContent>
            <Text>Padded item 2</Text>
          </ListItem.HeadlineContent>
        </ListItem>
        <ListItem>
          <ListItem.HeadlineContent>
            <Text>Padded item 3</Text>
          </ListItem.HeadlineContent>
        </ListItem>
      </LazyColumn>
    </Host>
  );
}
```

</ComponentExample>

## API

```tsx
import { LazyColumn } from '@expo/ui/jetpack-compose';
```

<APISection
  packageName="expo-ui/jetpack-compose/lazycolumn"
  apiName="LazyColumn"
/>
